# poetry_project_template

./: README.md  pyproject.toml
tests/: test_poetry_demo.py
