[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["fooqoo"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
